[package]
name = "oscript"
description = "helper crate to simplify the creation of rust scripts"
version = "0.1.1"
edition = "2021"
authors = ["Olof Blomqvist <olof@twnet.se>"]
license-file = "LICENSE"
repository = "https://github.com/OlofBlomqvist/oscript"

[dependencies]
oscript-derive = { path = "../oscript-derive" }
#oscript-derive = "0.1.0"
clap_complete = "4.5.38"
clap = { version = "4.2", features = ["derive"] }
tokio = { version = "1.42.0", optional = true, features = ["full"] }

[features]
default = []
tokio = ["dep:tokio"] 